# Money-map

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: categorize.py  celery_app.py  config.py  db.py  main.py  models.py  tasks.py
backend/app/parsers/: base.py  millennium.py  revolut.py
backend/tests/: test_parsers.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: button.tsx  card.tsx  select.tsx
